--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -6,7 +6,7 @@ COPY package*.json ./
 RUN yarn global add bun
 RUN bun install
 COPY . .
-RUN bun build
+RUN bun run build
 
 # Stage 2: Running the app
 FROM node:current
@@ -19,7 +19,6 @@ COPY --from=builder /app/next.config.mjs ./
 COPY --from=builder /app/public ./public
 COPY --from=builder /app/package.json ./package.json
 COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/bin ./bin
 COPY --from=builder /app/node_modules ./node_modules
 
 RUN yarn global add bun
