--- a/app/package.json
+++ b/app/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "dev": "bun server.ts",
     "build": "next build",
-    "start": "NODE_ENV=production bun server.ts",
-    "lint": "next lint"
+    "start": "NODE_ENV=production bun server.ts"
   },
   "dependencies": {
     "@versatus/versatus-javascript": "^0.1.162",
     "axios": "^1.6.8",
+    "bun": "^1.1.9",
     "chess.js": "^1.0.0-beta.8",
     "clsx": "^2.1.0",
     "framer-motion": "^11.1.1",
@@ -27,13 +27,13 @@
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.1"
+    "typescript": "^5"
   }
 }
