--- a/app/package.json
+++ b/app/package.json
@@ -19,12 +19,14 @@
     "react": "^18",
     "react-animated-counter": "^1.7.9",
     "react-chessboard": "^4.5.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
     "sharp": "^0.33.3",
     "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
